Bug #12945 : Search box is too wide and no eye brown nav when a project or misc site is provisioned.

--- a/sites/all/themes/slac/sass/_layout.sass
+++ b/sites/all/themes/slac/sass/_layout.sass
@@ -15,7 +15,7 @@
       color: $red
 
 
-.extentions_people_link_sidebar
+.extentions_people_link_sidebar 
 
   &:link
     color: #635c2c
@@ -2254,6 +2254,7 @@ form.search-form
     > div
       display: none
       position: absolute
+      z-index: 1
       top: 0
       left: 0
 
